fix: application mobile first page contact

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 @media only screen and (min-width:1025px) {
+
+    html,
     body {
         font-family: 'Ubuntu', Helvetica, sans-serif;
         font-size: 18px;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+
     }
 
     .containair {
         padding: 0px 7vw 0px 7vw;
         line-height: 1.5;
-
     }
 
     .hidden {
@@ -18,7 +23,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin: 20px 50px 60px 50px;
+        margin: 20px 50px 30px 50px;
         font-size: 20px;
     }
 
@@ -26,13 +31,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 20px 100px 150px 100px;
+        padding: 5vh 10vh 17vh 10vh;
         font-size: 18px;
-
     }
 
     .main__text-btnColors {
-        width: 50%;
+        width: 35%;
     }
 
     .parcours,
@@ -44,17 +48,17 @@
     }
 
     .main__imgPresentation {
-        border-radius: 40px;
+        border-radius: 70px;
+
     }
 
     .main__groupe-btnColors {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
         text-align: center;
         padding-top: 20px;
-        gap: 20px;
-
+        gap: 50px;
     }
 
     .main__groupe-btnColors_couleur:hover {
@@ -70,7 +74,7 @@
         flex-direction: row;
         gap: 30px;
         justify-content: space-between;
-        margin: 30px;
+        margin: 30px 30px 40px 30px;
     }
 
     .footer__phoneNumber,
@@ -93,74 +97,44 @@
         border-right: ridge 1px black;
         padding-right: 20px;
     }
-/* page projet */
-.projetCard{
-    display: flex;
-    gap: 20vw;
+
+    /* page projet */
+    .projetCard {
+        display: flex;
+        gap: 20vw;
+
+    }
+
+    .imgProjet,
+    .descriptProjet {
+        width: 50%;
+        height: 100%;
+    }
+
+    .containair__titre-projet {
+        text-align: left;
+        padding: 0;
+        font-size: 2rem;
+    }
+
+    /* page contact */
+    .containair__dispositionContact {
+        display: flex;
+        justify-content: center;
+        gap: 20vw;
+        padding: 12dvh 2dvw 12dvh 2dvw;
+    }
+
+    form {
+        width: 50%;
+        display: flex;
+        gap: 2vw;
+        flex-wrap: wrap;
+
+    }
+
+    [type=submit] {
+        margin: 1dvw 0dvw 0dvw 3dvw;
+    }
 
 }
-.imgProjet,
-.descriptProjet{
-    width: 50%;
-    height: 100%;
-}
-.containair__titre-projet{
-  text-align: left;
-  padding: 0;
-  font-size: 2rem;
-}
-
-}
-
-
-/* 
-
-
-
-
-
-.navigation{
-    margin: 0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-decoration: none;
-    list-style-type: none;
-    gap: 30px;
-}
-ul{
-    margin: 0px;
-    text-decoration: none;
-    list-style-type: none;
-
-}
-
-
-
-.item_1 {
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.main__text-btnColors{
-    width: 30dvw;
-    margin-left: 5dvw;
-}
-
-
-
-.langue{
-    margin-bottom: 50px;
-}
-.presentation {
-    line-height: 1.5;
-    text-align: justify;
-}
-.hr{
-    margin-top: 70px;
-}
-
-
-
-
- */
