--- a/css/styleMobile.css
+++ b/css/styleMobile.css
@@ -1,15 +1,14 @@
-/* @media only screen and (max-width: 767px) { */ 
     body {
-        font-family: 'Ubuntu',Helvetica, sans-serif;
+        font-family: 'Ubuntu', Helvetica, sans-serif;
         line-height: 1.5;
-        overflow-x: hidden;  
+        overflow-x: hidden;
     }
-    
+
     .containair {
-        padding: 0px ;
-        margin: 10px;   
+        padding: 0px;
+        margin: 10px;
     }
-    
+
     .header {
         display: flex;
         flex-direction: column;
@@ -17,12 +16,12 @@
         padding: 20px;
     }
 
-    .navigation{
+    .navigation {
         padding: 0;
         text-align: center;
         flex-direction: row;
     }
-    
+
     ul {
         margin: 0px;
         display: flex;
@@ -33,29 +32,30 @@
         gap: 10px;
     }
 
-    .barre{
+    .barre {
         border-right: 1px solid black;
         padding: 0px 10px 0px 10px;
     }
-    
- 
-   .item_1 {
+
+
+    .item_1 {
         font-weight: bold;
         font-size: 18px;
     }
-    
-    .main__imgPresentation{
+
+    .main__imgPresentation {
         width: 100%;
         margin: 0px;
         height: auto;
     }
+
     .phoneNumber,
     .footer__email,
-    .reseauxSociaux{
+    .reseauxSociaux {
         line-height: 1;
-       
+
     }
-    
+
     /* main {
         display: flex;
         align-items: center;
@@ -64,7 +64,7 @@
         font-size: 18px;
         margin: 30px 20px 30px 20px; 
     } */
-    
+
     .presentation,
     h2,
     h1,
@@ -74,15 +74,16 @@
         font-size: 23px;
         padding: 0px 20px 0px 20px;
     }
-    
-  
-    figure{
+
+
+    figure {
         margin: 0px;
     }
-    .imgForProjet{
+
+    .imgForProjet {
         width: 100%;
     }
-    
+
     footer {
         display: flex;
         flex-direction: column;
@@ -94,12 +95,12 @@
 
     .footer__phoneNumber,
     .footer__email,
-    .footer__reseauxSociaux{
+    .footer__reseauxSociaux {
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
-    
+
     .main__groupe-btnColors {
         display: flex;
         justify-content: center;
@@ -107,9 +108,9 @@
         text-align: center;
         padding-top: 20px;
         gap: 20px;
-      
+
     }
-    
+
     .main__groupe-btnColors_couleur {
         border: ridge 1px black;
         border-radius: 100px;
@@ -121,89 +122,100 @@
         font-weight: bold;
         font-size: 20px;
     }
-    
+
     .header__h1 {
         font-size: 20px;
     }
 
-    h5{
+    h5 {
         display: inline-block;
         font-size: 32px;
     }
-    
+
     .orange {
         background-color: rgb(243, 166, 0);
     }
-    
+
     .red {
         background-color: red;
     }
-    
+
     .green {
         background-color: rgb(0, 255, 213);
     }
-    
-    a{
+
+    a {
         text-decoration: none;
         color: black;
     }
-    .date{
+
+    .date {
         float: right;
         font-size: 1rem;
     }
-    .prghParcour{
+
+    .prghParcour {
         text-align: justify;
         line-height: 1.5;
-       
+
     }
+
     .parcours,
     .Compétences,
     .atouts,
-    .titreLangue{
+    .titreLangue {
         padding: 0px 30px 0px 30px;
-        
+
     }
-    ul{
+
+    ul {
         flex-direction: column;
         padding-bottom: 30px;
     }
 
     [type=text],
-    [type=email]{
+    [type=email] {
         height: 30px;
         width: 100%;
         margin-bottom: 20px;
     }
-    [type="submit"]{
+
+    [type="submit"] {
         margin-left: 30dvw;
     }
-    .message{
+
+    .message {
         height: 80px;
         width: 100%;
         margin-bottom: 30px;
     }
-    form{
-        padding: 20px;   
+
+    form {
+        padding: 20px;
     }
-    .containair__difirstContainer{
+
+    /* .containair__difirstContainer{
         display: none;
+    } */
+    .projet {
+        text-align: center;
     }
-    .projet{
-        text-align: center;    
-    }
-    .containairProjet{
+
+    .containairProjet {
         padding: 10px;
     }
-    .imgProjet{
-        border-radius: 10px ;
+
+    .imgProjet {
+        border-radius: 10px;
         border: 20px solid rgb(241, 241, 241);
     }
-    .projetCard{
+
+    .projetCard {
         margin-bottom: 50px;
         text-align: justify;
         line-height: 1.5;
     }
-    .cv{
+
+    .cv {
         margin: 0px 0px 30px 35dvw;
     }
-/* } */
